--- a/text.html
+++ b/text.html
@@ -18,6 +18,7 @@
     Your message:
     <textarea name="message"></textarea>
   </label>
+  <input type="file" name="upload">
   <!-- your other form fields go here -->
   <button type="submit">Send</button>
 </form>
